--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -658,6 +658,7 @@
             "COLUMN_ID": "Vulnérabilitée",
             "COLUMN_SEVERITY": "Severitée",
             "COLUMN_PACKAGE": "Paquet",
+            "COLUMN_PACKAGES": "Paquets",
             "COLUMN_VERSION": "Version Actuelle",
             "COLUMN_FIXED": "Fixé dans le version",
             "COLUMN_DESCRIPTION": "Description",
@@ -703,6 +704,8 @@
         "DOCKER_VERSION": "Version de Docker",
         "ARCHITECTURE": "Architecture",
         "OS": "OS",
+        "HAVE": "have",
+        "HAS": "has",
         "SCAN_COMPLETION_TIME": "Analyse Terminée",
         "IMAGE_VULNERABILITIES": "Vulnérabilitées de l'Image",
         "PLACEHOLDER": "Nous ne trouvons aucun tag !",
