--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -129,9 +129,12 @@
             "GROUP": "Groups",
             "REGISTRY": "Registries",
             "REPLICATION": "Replications",
-            "CONFIG": "Configuration"
+            "CONFIG": "Configuration",
+            "VULNERABILITY": "Vulnerability",
+            "GARBAGE_COLLECTION": "Garbage Collection"
         },
         "LOGS": "Logs",
+        "TASKS": "Tasks",
         "API_EXPLORER": "API EXPLORER"
     },
     "USER": {
@@ -595,6 +598,7 @@
         "SUB_TITLE_SUFIX": "logs"
     },
     "CONFIG": {
+        "HISTORY": "History",
         "TITLE": "Configuration",
         "AUTH": "Authentication",
         "REPLICATION": "Replication",
@@ -913,7 +917,7 @@
     "GC": {
         "CURRENT_SCHEDULE": "Current Schedule",
         "GC_NOW": "GC NOW",
-        "JOB_HISTORY": "GC Jobs History",
+        "JOB_HISTORY": "GC History",
         "JOB_ID": "Job ID",
         "TRIGGER_TYPE": "Trigger Type",
         "LATEST_JOBS": "Latest {{param}} Jobs",
